--- a/frontend/static/theme.css
+++ b/frontend/static/theme.css
@@ -1,5 +1,7 @@
 /* Reset CSS from Eric Meyer */
 
+.error { color: red; }
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -61,6 +63,15 @@ body{
 
 .holygrail-body .content {
 	width: 100%;
+}
+
+#sessions-title {
+	font-size: larger;
+	margin: 15px;
+	width: 200px;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #sessions {
